# fastapi_sqlmodel

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
fastapi_sqlmodel/: config.py
fastapi_sqlmodel/db/: db.py
fastapi_sqlmodel/models/: __init__.py
fastapi_sqlmodel/routers/: example.py
fastapi_sqlmodel/services/: example.py
migrations/: env.py
migrations/versions/: f03a36613183_init.py
tests/: conftest.py
tests/e2e/: test_example.py
